Extra validation to make sure folks get the runtime & distribution versions right